<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HotPink"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dp"
                        android:layout_height="89dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/drawn_eiffel_tower_silhouette_pencil_and_color_drawn_0" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:fontFamily="@font/chopinscript"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/bonjour"
                    android:textSize="36sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuralightbt"
                    android:gravity="center_horizontal"
                    android:text="@string/full_name" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="345dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rounded_shape"
                        android:fontFamily="@font/futuralightbt"
                        android:gravity="center_horizontal"
                        android:hint="@string/enter_name" />


                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp" />


                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuralightbt"
                    android:gravity="center_horizontal"
                    android:text="@string/phone_number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="1dp" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="345dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rounded_shape"
                        android:fontFamily="@font/futuralightbt"
                        android:gravity="center_horizontal"
                        android:hint="@string/enter_phone_number" />


                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuralightbt"
                    android:gravity="center_horizontal"
                    android:text="@string/no_of_pax" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="1dp" />

                    <EditText
                        android:id="@+id/pax"
                        android:layout_width="345dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rounded_shape"
                        android:fontFamily="@font/futuralightbt"
                        android:gravity="center_horizontal"
                        android:hint="@string/number_of_people" />


                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <View
                    android:layout_width="350dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/black" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuralightbt"
                    android:gravity="center_horizontal"
                    android:text="@string/choose_date"
                    android:textSize="24sp" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futuralightbt"
                    android:gravity="center_horizontal"
                    android:text="@string/choose_time"
                    android:textSize="24sp" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="1dp" />

                    <CheckBox
                        android:id="@+id/smoke"
                        android:layout_width="31dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/futuralightbt"
                        android:text="@string/smoking_area" />

                    <Button
                        android:id="@+id/book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_shape"
                        android:fontFamily="sans-serif"
                        android:text="@string/book" />

                    <View
                        android:layout_width="36dp"
                        android:layout_height="1dp" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <View
                    android:layout_width="350dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/black" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/futuralightbt"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Booking"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futuramediumcondensedbt"
                        android:text="Customer Name: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/outputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="7dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futuramediumcondensedbt"
                        android:text="Telephone: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/outputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="7dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futuramediumcondensedbt"
                        android:text="No. of Pax: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/outputPax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="7dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futuramediumcondensedbt"
                        android:text="Location: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/outputSmoke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="7dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futuramediumcondensedbt"
                        android:text="Booking Date: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/outputDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="7dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futuramediumcondensedbt"
                        android:text="Booking Time: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/outputTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp" />


                    <Button
                        android:id="@+id/reset"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_shape"
                        android:fontFamily="sans-serif"
                        android:text="@string/reset" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="13dp" />

                <View
                    android:layout_width="350dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chopinscript"
                    android:gravity="center_horizontal"
                    android:text="Au revoir"
                    android:textSize="24sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="14dp" />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

